--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^5.4.0"
+    "jsonwebtoken": "^9.0.1",
+    "mongodb": "^5.7.0"
   }
 }
